<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ams_xq</name>
  <version>0.0.0</version>
  <description>ams for action + msg + srv</description>
  <license>BSD</license>
  <url type="website">https://index.ros.org/doc/ros2</url>
  <author>DZY</author>
  <maintainer email="DZY@DZY.COM">DZY</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
  
</package>
